// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Турбо-оверлей Frame Cоздает корректную разметку 1`] = `
<iframe
  class="turbo-overlay__iframe"
  src="https://yandex.ru/turbo?text=about"
/>
`;

exports[`Турбо-оверлей Frame Cоздает корректную разметку 2`] = `
<div
  class="turbo-overlay__body"
>
  <iframe
    class="turbo-overlay__iframe"
    src="https://yandex.ru/turbo?text=about"
  />
</div>
`;

exports[`Турбо-оверлей Frame Cоздает корректную разметку 3`] = `
<iframe
  class="turbo-overlay__iframe"
  src="https://yandex.ru/turbo?text=test_news"
/>
`;

exports[`Турбо-оверлей Frame Cоздает корректную разметку 4`] = `
<div
  class="turbo-overlay__body"
>
  <iframe
    class="turbo-overlay__iframe"
    src="https://yandex.ru/turbo?text=test_news"
  />
</div>
`;

exports[`Турбо-оверлей Frame Добавляет, показывает и прячет несколько iframe 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div>
      <div
        class="turbo-overlay__body"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example.com"
        />
      </div>
      <div
        class="turbo-overlay__body"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example1.com"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Frame Добавляет, показывает и прячет несколько iframe 2`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div>
      <div
        class="turbo-overlay__body turbo-overlay__body_visible"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example.com"
        />
      </div>
      <div
        class="turbo-overlay__body"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example1.com"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Frame Добавляет, показывает и прячет несколько iframe 3`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div>
      <div
        class="turbo-overlay__body"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example.com"
        />
      </div>
      <div
        class="turbo-overlay__body"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example1.com"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Frame Добавляет, показывает и прячет несколько iframe 4`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div>
      <div
        class="turbo-overlay__body"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example.com"
        />
      </div>
      <div
        class="turbo-overlay__body turbo-overlay__body_visible"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example1.com"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Frame Добавляет, показывает и прячет несколько iframe 5`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div>
      <div
        class="turbo-overlay__body"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example.com"
        />
      </div>
      <div
        class="turbo-overlay__body"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example1.com"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Frame Добавляет, показывает и прячет несколько iframe 6`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div>
      <div
        class="turbo-overlay__body"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example1.com"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Frame Добавляет, показывает и прячет несколько iframe 7`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`Турбо-оверлей Frame Добавляет, показывает, прячет и удаляет iframe 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div>
      <div
        class="turbo-overlay__body"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example.com"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Frame Добавляет, показывает, прячет и удаляет iframe 2`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div>
      <div
        class="turbo-overlay__body turbo-overlay__body_visible"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example.com"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Frame Добавляет, показывает, прячет и удаляет iframe 3`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div>
      <div
        class="turbo-overlay__body turbo-overlay__body_visible"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example.com"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Frame Добавляет, показывает, прячет и удаляет iframe 4`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div>
      <div
        class="turbo-overlay__body"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example.com"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Frame Добавляет, показывает, прячет и удаляет iframe 5`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div>
      <div
        class="turbo-overlay__body turbo-overlay__body_visible"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example.com"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Frame Добавляет, показывает, прячет и удаляет iframe 6`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div>
      <div
        class="turbo-overlay__body turbo-overlay__body_visible"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example.com"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Frame Добавляет, показывает, прячет и удаляет iframe 7`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div>
      <div
        class="turbo-overlay__body"
      >
        <iframe
          class="turbo-overlay__iframe"
          src="https://example.com"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`Турбо-оверлей Frame Добавляет, показывает, прячет и удаляет iframe 8`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`Турбо-оверлей Frame Устанавливает сдвиг фрейму 1`] = `
<div>
  <div
    class="turbo-overlay__body"
  >
    <iframe
      class="turbo-overlay__iframe"
      src="https://example.com"
    />
  </div>
</div>
`;

exports[`Турбо-оверлей Frame Устанавливает сдвиг фрейму 2`] = `
<div>
  <div
    class="turbo-overlay__body"
    style="left: 10px;"
  >
    <iframe
      class="turbo-overlay__iframe"
      src="https://example.com"
    />
  </div>
</div>
`;

exports[`Турбо-оверлей Frame Устанавливает сдвиг фрейму 3`] = `
<div>
  <div
    class="turbo-overlay__body"
    style="left: 100%;"
  >
    <iframe
      class="turbo-overlay__iframe"
      src="https://example.com"
    />
  </div>
</div>
`;
